Some fixes + Cancel event implemented
