# docs/swagger.json
@@ -54,13 +54,11 @@
                 "$ref": "#/components/schemas/EventInput"
               },
               "example": {
-                "userId": "44444444-4444-4444-4444-444444444444",
                 "name": "Tech Conference 2024",
                 "description": "A cutting-edge conference on emerging tech trends.",
                 "startAt": "2024-05-15T09:00:00Z",
                 "endAt": "2024-05-16T17:00:00Z",
-                "price": 199.99,
-                "eventstatus_id": "44444444-4444-4444-4444-444444444444"
+                "price": 199.99
               }
             }
           }
@@ -80,8 +78,7 @@
                   "description": "A cutting-edge conference on emerging tech trends.",
                   "startAt": "2024-05-15T09:00:00Z",
                   "endAt": "2024-05-16T17:00:00Z",
-                  "price": 199.99,
-                  "eventstatus_id": "44444444-4444-4444-4444-444444444444"
+                  "price": 199.99
                 }
               }
             }
@@ -193,7 +190,6 @@
                 "$ref": "#/components/schemas/EventInput"
               },
               "example": {
-                "userId": "44444444-4444-4444-4444-444444444444",
                 "name": "Tech Conference 2024 (Updated)",
                 "description": "An updated cutting-edge conference on emerging tech trends.",
                 "startAt": "2024-05-15T10:00:00Z",
@@ -268,6 +264,41 @@
         "responses": {
           "200": {
             "description": "Event status updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Event"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Event not found"
+          }
+        }
+      }
+    },
+    "/api/events/{id}/cancel": {
+      "put": {
+        "summary": "Cancel a specific event by ID",
+        "operationId": "cancelEvent",
+        "tags": [
+          "Events"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the event",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Event cancelled successfully",
             "content": {
               "application/json": {
                 "schema": {
